adjust select system

--- a/src/app/components/atoms/table/table.component.html
+++ b/src/app/components/atoms/table/table.component.html
@@ -1,26 +1,22 @@
-<table mat-table [dataSource]="dataSource">
+<table mat-table [dataSource]="dataSource" class="table">
   @for (column of columns; track column) {
     <ng-container [matColumnDef]="column">
       <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-      <td mat-cell *matCellDef="let row">
+      <td [class.disable-cursor-pointer]="printControls" mat-cell *matCellDef="let row">
         {{ printControls ? row[column] : row.getControlData(column) }}
       </td>
     </ng-container>
   }
   <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
   @if (printControls) {
-    <tr
-      mat-row
-      *matRowDef="let row; columns: columns"
-      (click)="ss.setToUpdate(fractal)"
-      [class.clicked-row]="ss.$toUpdate().includes(fractal)"></tr>
+    <tr mat-row *matRowDef="let row; columns: columns"></tr>
   } @else {
     <tr
       mat-row
       *matRowDef="let row; columns: columns"
       appTap
-      (hold)="ss.select(row)"
-      (touch)="ss.setToUpdate(row)"
-      [class.clicked-row]="ss.$toUpdate().includes(row)"></tr>
+      (hold)="ss.selectItems(row)"
+      (touch)="ss.setItem(row)"
+      [class.clicked-row]="ss.$items().includes(row)"></tr>
   }
 </table>
