--- a/src/app/components/organisms/screen/screen.component.html
+++ b/src/app/components/organisms/screen/screen.component.html
@@ -1,5 +1,5 @@
 @let root = ent.$root();
-@let current = ss.$currentFractal();
+@let current = ss.$current();
 
 @if (root && current) {
   @if (Modifiers) {
