--- a/src/app/components/organisms/modifier/modifier.component.html
+++ b/src/app/components/organisms/modifier/modifier.component.html
@@ -1,12 +1,17 @@
-@let toAdd = ss.$toAdd();
-@let toUpdate = ss.$toUpdate();
+@let news = ss.$new();
+@let items = ss.$items();
+@let current = ss.$current();
 
 <div class="modifier">
-  @if (toAdd.length > 0) {
-    <app-edit-modifier [fractals]="toAdd" />
+  @if (news.length > 0) {
+    <app-edit-modifier [fractals]="news" />
   }
 
-  @if (toUpdate.length > 0) {
-    <app-edit-modifier [fractals]="toUpdate" />
+  @if (current) {
+    <app-edit-modifier [fractals]="[current]" />
+  }
+
+  @if (items.length > 0) {
+    <app-edit-modifier [fractals]="items" />
   }
 </div>
