--- a/src/app/components/molecules/form-card/form-card.component.scss
+++ b/src/app/components/molecules/form-card/form-card.component.scss
@@ -1,10 +1,5 @@
 @use 'variables.scss' as *;
 
-.subtitle {
-  margin-bottom: $size-extra-small;
-  color: $color-success;
-}
-
-.Delete {
-  color: $color-danger;
+.mat-card-title-group {
+  margin-bottom: $size-small;
 }
