--- a/src/app/components/atoms/select/select.component.html
+++ b/src/app/components/atoms/select/select.component.html
@@ -1,5 +1,5 @@
 <mat-form-field [class]="className" class="app-form-field">
-  <mat-label>{{ name }}</mat-label>
+  <mat-label>{{ label }}</mat-label>
   <mat-select [formControl]="formCtr">
     @for (opt of opts; track opt) {
       <mat-option value="{{ opt }}">{{ opt }}</mat-option>
