--- a/src/app/components/molecules/form/form.component.html
+++ b/src/app/components/molecules/form/form.component.html
@@ -1,22 +1,26 @@
 <form>
-  @for (name of fractal.controlsKeys; track name) {
-    @let control = fractal.getControl(name);
-    @let formControls = fractal.getFormControls(name);
+  @for (indicator of fractal.controlsIndicators; track indicator) {
+    @let control = fractal.getControl(indicator);
+    @let formControls = fractal.getFormControls(indicator);
 
     @switch (control.input) {
       @case (controlInputs.New) {
-        <app-select className="form-field" [name]="name" [opts]="controlInputsArray" [formCtr]="formControls.input" />
-        <app-input [name]="name" [formCtr]="formControls.data" />
+        <app-select
+          className="form-field"
+          [label]="indicator"
+          [opts]="controlInputsArray"
+          [formCtr]="formControls.input" />
+        <app-input [label]="indicator" [formCtr]="formControls.data" />
       }
       @case (controlInputs.Select) {
         <app-select
           className="form-field"
-          [name]="name"
+          [label]="indicator"
           [opts]="control.data.split(':')"
           [formCtr]="formControls.data" />
       }
       @default {
-        <app-input [name]="name" [formCtr]="formControls.data" />
+        <app-input [label]="indicator" [formCtr]="formControls.data" />
       }
     }
   }
