--- a/src/app/components/molecules/form-card/form-card.component.html
+++ b/src/app/components/molecules/form-card/form-card.component.html
@@ -26,6 +26,7 @@
   </mat-card-header>
   <mat-card-content>
     <app-form [fractal]="fractal" />
+    <app-form [fractal]="fractal" />
     <ng-content />
   </mat-card-content>
 </mat-card>
