--- a/src/app/components/molecules/form/form.component.html
+++ b/src/app/components/molecules/form/form.component.html
@@ -4,20 +4,8 @@
     @let formControls = fractal.getFormControls(indicator);
 
     @switch (control.input) {
-      @case (controlInputs.New) {
-        <app-select
-          className="form-field"
-          [label]="indicator"
-          [opts]="controlInputsArray"
-          [formCtr]="formControls.input" />
-        <app-input [label]="indicator" [formCtr]="formControls.data" />
-      }
       @case (controlInputs.Select) {
-        <app-select
-          className="form-field"
-          [label]="indicator"
-          [opts]="control.data.split(':')"
-          [formCtr]="formControls.data" />
+        <app-select [label]="indicator" [opts]="control.data.split(':')" [formCtr]="formControls.data" />
       }
       @default {
         <app-input [label]="indicator" [formCtr]="formControls.data" />
